methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:2: error: not found: value baiseBrosse
  Bloc();baiseBrosse();
         ^